# cs159-proj

models/: .gitignore  alignmentDeEn.talp  europarl-v7.de-en.de.100.tok  europarl-v7.de-en.de.1000.tok  europarl-v7.de-en.de.10000.tok  europarl-v7.de-en.de.20.tok  europarl-v7.de-en.en.100.tok  europarl-v7.de-en.en.1000.tok  europarl-v7.de-en.en.10000.tok  europarl-v7.de-en.en.20.tok  europarl-v7.fr-en.en.100.tok  europarl-v7.fr-en.en.1000.tok  europarl-v7.fr-en.en.10000.tok  europarl-v7.fr-en.en.hand.tok  europarl-v7.fr-en.fr.100.tok  europarl-v7.fr-en.fr.1000.tok  europarl-v7.fr-en.fr.10000.tok  europarl-v7.fr-en.fr.hand.tok  europarl.de-en.de.hand.tok  europarl.de-en.en.hand.tok  pyproject.toml
models/cs159_proj/: alignments.py  files.py  german.py  main.py  test.py
tokenizer/: pom.xml
tokenizer/src/main/java/proj/: App.java
