[tool.poetry]
name = "cs159-proj"
version = "0.1.0"
description = ""
authors = ["Dylan Yang <dylany360@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
